--- a/package.json
+++ b/package.json
@@ -14,13 +14,25 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "express-handlebars": "^4.0.0"
+    "express-handlebars": "^4.0.6"
   },
   "devDependencies": {
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
     "jest": "^25.1.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.7",
     "supertest": "^4.0.2"
-  }
+  },
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kahu-2021/server-side-rendering.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/kahu-2021/server-side-rendering/issues"
+  },
+  "homepage": "https://github.com/kahu-2021/server-side-rendering#readme"
 }
