--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
   "scripts": {
     "start": "node index",
     "dev": "nodemon index",
-    "test": "jest --watchAll",
+    "test": "jest --watch",
     "lint": "eslint ."
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.0"
   },
   "devDependencies": {
     "eslint": "7.9.0",
     "eslint-config-eda": "0.1.4",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
